Minor spacing issue with hero HR

--- a/css/main.css
+++ b/css/main.css
@@ -166,7 +166,7 @@ h2 {
 }
 .hero h2 {
     margin: 0;
-    padding: 50px 0 15px;
+    padding: 50px 0 25px;
     text-align: center;
     font-family: 'Lora', serif;
     font-size: 50px;
